fix-md-overflow

--- a/src/Editor.css
+++ b/src/Editor.css
@@ -23,7 +23,7 @@
     font-family: Consolas,"Microsoft Yahei","Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     padding: 10px;
-    height: 100vh;
+    
     resize: none;
 }
 
